# Qery

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package.json  tsconfig.json
client/: index.html  package.json  vite.config.ts
client/src/: App.tsx  globals.css  main.tsx
client/src/components/: CommandPalette.tsx  CompareGrids.tsx
client/src/hooks/: useAnnotations.ts  useConnection.ts  useConnectionStatus.ts  useDescriptions.ts  useDiscovery.ts  useDriver.ts  useEditorToolbarActions.ts  useFavorites.ts  useGhostFKs.ts  useKeyboardShortcuts.ts  useObjectDetails.ts  useQuery.ts  useSavedQueries.ts  useSchema.ts  useTableDetails.ts
client/src/i18n/: index.ts
client/src/lib/: api.ts  column-alias-parser.ts  (+14 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  login.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: annotations.rs  connections.rs  descriptions.rs  discovery.rs  export.rs  favorites.rs  health.rs  mod.rs  objects.rs  query.rs  relationships.rs  schema.rs  session_state.rs  tables.rs
src-tauri/src/db/: encryption.rs  migrations.rs  mod.rs  sqlite.rs
src-tauri/src/drivers/: mod.rs  registry.rs  resolve.rs  traits.rs
src-tauri/src/drivers/mssql/: discovery.rs  driver.rs  mod.rs  query.rs  sql.rs
src-tauri/src/drivers/postgres/: driver.rs  mod.rs  query.rs  sql.rs
src-tauri/src/drivers/sqlite/: driver.rs  query.rs  sql.rs
src-tauri/src/repositories/: annotations.rs  cached_schemas.rs  connections.rs  favorites.rs  mod.rs  object_details_cache.rs  parsed_descriptions.rs  query_history.rs  relationships.rs  saved_queries.rs  session_state.rs
src-tauri/src/services/: connection_service.rs  description_parser_service.rs  discovery_service.rs  export_service.rs  ghost_fk_service.rs  mod.rs  object_service.rs  query_service.rs  safety_analysis_service.rs  schema_service.rs  table_service.rs
src-tauri/tests/: pg_driver_test.rs
(+110 files in other folders)
